Fixes alignment of ad in medium breakpoint.

--- a/themes/greatermedia/assets/css/sass/components/_ads.scss
+++ b/themes/greatermedia/assets/css/sass/components/_ads.scss
@@ -53,13 +53,18 @@ category: Components - Ads
 	margin: 0 auto;
 	text-align: center;
 
+	@include bp(medium) {
+		float: none;
+		margin: 0 0 1em 1em;
+	}
+
 	@include bp(large) {
 		float: right;
 		margin: 0 0 1em 1em;
 	}
 
-	@include bp(medium) {
-		float: none;
+	@include bp(x-large) {
+		float: right;
 		margin: 0 0 1em 1em;
 	}
 }
